welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^DwarfCode:3: warning: enclosing method posFinale has result type Unit: return value discarded
    return true
    ^DwarfCode:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^DwarfCode:5: warning: enclosing method posFinale has result type Unit: return value discarded
  return false
  ^DwarfCode:8: error: value unary_! is not a member of Unit
while (!posFinale()){
       ^